kk: Adjust theme component and fix z-index issue with growls

--- a/src/style/_app-temp.scss
+++ b/src/style/_app-temp.scss
@@ -3723,7 +3723,7 @@ tbody.collapse.in {
   position: fixed;
   right: 0;
   left: 0;
-  z-index: 1030; }
+}
 @media (min-width: 768px) {
   .navbar-fixed-top,
   .navbar-fixed-bottom {
